# gosha

./: Makefile  main.py  pyproject.toml  ruff.toml
vd_games/: cli.py
vd_games/scripts/: VD_even.py  VD_games.py  VD_main.py
